go_web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web
spec:
  replicas: 4
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web
        image: ghcr.io/davidslusser/pod_info_go:latest
        imagePullPolicy: IfNotPresent
