py_web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-web
spec:
  replicas: 4
  selector:
    matchLabels:
      app: py-web
  template:
    metadata:
      labels:
        app: py-web
    spec:
      containers:
      - name: py-web
        image: ghcr.io/davidslusser/pod_info_py:latest
        imagePullPolicy: IfNotPresent
