service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  ports:
  # Default port used by the image
  - port: 8080
